try to building it

--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,12 @@
 	</head>
 	<body>
 		<h1>Go Chat</h1>
+		<div id="online-users"></div>
 		<div id="chatbox"></div>
 		<input type="text" id="input" placeholder="Type a message..." />
 		<script src="/static/chat.js"></script>
 	</body>
 </html>
+
+"d269cf48-03ca-4a9b-bee8-d933e2db37dc"
+"082a60c4-c494-4415-9d23-b0cdd9c11b07"
